tests/neg-custom-args/nowarn/nowarn-parser-error.scala
class C {
  def a = try 1 // warn
  def def // error
}
